When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 

29th April 2020
- DEVELOPER [branch autoROI]: 
   * Recipe.tilePattern can now create a tile grid for one one defined ROI using a new input argument
   * Refactor of properties and methods in BT and acquisition_view to enable tile grids to be overlaid on top of the preview image
- Note: as with changes from previous days there are numerous "TODOs"

27th April 2020
- USER [branch autoROI]: remove scanner ID (name) and scan type ("tile") from status text. This is not useful information and/or it can be found elsewhere.
- DEVELOPER [branch autoROI]: 
   * Began work on auto-ROI feature in new branch: "autoROI"
   * Removed ribbon-scanning code (autoROI)
   * Renamed default property value recipe.mosaic.scanmode from 'tile' to 'tiled: manual ROI' (autoROI)
   * Preview stack is returned rotated correctly so only axis xy is needed for it to look as it should

24th April 2020
- DEVELOPER [branch dev]:
   * dummyScanner correctly saves tiles for stitching via BT.bake
   * verbose in recipe now stops the messages relating to the scanner settings parameters not being available.


23rd April 2020
- DEVELOPER:
   * downsampled tile size set using the number of microns per pixel rather than a fixed size in pixels.
   * previewScans and Bake largely work with the dummyScanner.
   * x/y speed set to default value on startup.
   * The update interval for the preview image can now be altered using a property. 
   * Add option to disable axis ready check during acquisition

21st April 2020
- DEVELOPER: 
   * dummyScanner uses previewStacks as dataset format.