@@ -6,6 +6,9 @@ When mature, changes should be merged into master *as a merge commit*  and this 
 In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 
 
+11th May 2020
+- DEVELOPER [branch autoROI]: Delete EPS300.m as likely it will never be completed. 
+
 29th April 2020
 - DEVELOPER [branch autoROI]: 
    * Recipe.tilePattern can now create a tile grid for one one defined ROI using a new input argument
